--- a/apple-pie/styles/style.css
+++ b/apple-pie/styles/style.css
@@ -1,5 +1,4 @@
 /* CSS RESET - do not remove */
-/* Reset default browser styles and provide a consistent starting point */
 html {
   box-sizing: border-box;
   font-size: 16px;
@@ -14,11 +13,64 @@ body, h1, h2, h3, h4, h5, h6, p, ol, ul {
   padding: 0;
   font-weight: lighter;
 }
-
-/*  Set the font */
+p,li{
+  font-size: 20px;
+}
 body {
-  font-family: "Helvetica", sans-serif;
+  font-family: sans-serif;
 }
 
-/* STYLES */
-/* Write your CSS below */
+.header-info {
+  background-image: url("../images/apple-pie.jpg");
+  min-height: 900px; 
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+h1 {
+  text-align: center;
+  color: white;
+  font-size: 6em;
+}
+
+.description, .ingredients, .directions {
+  padding-left: 15%;
+  padding-right: 15%;
+  padding-top: 5%;
+  justify-content: center;
+  align-items: center;
+}
+
+.description p {
+  font-family: sans-serif;
+
+}
+
+.description img, .ingredients img {
+  width: 100%; 
+  max-width: 600px; 
+  margin: 0 auto;
+  display: block;
+  padding-top: 5%;
+}
+
+.ingredients ul {
+  list-style-type: none;
+  padding-top: 5%;
+  padding-left: 2%;
+}
+
+.ingredients li {
+  padding-top: 5px;
+  padding-bottom: 5px;
+}
+
+.directions ol {
+  padding-top: 5%;
+  padding-left: 3%;
+  margin-bottom: 100px;
+}
